# folkers

./: LICENSE  README.md  README.ru-RU.md  compose.yaml  nginx.conf
folkers-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
folkers-backend/src/: main.rs  middleware.rs  routers.rs  signatures.rs
folkers-backend/src/auth/: jwt.rs  mod.rs  user.rs
folkers-backend/src/database/: mod.rs  person.rs  signature.rs  user.rs
folkers-backend/src/uploads/: mod.rs  utils.rs
folkers-frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
folkers-frontend/src/: app.css  app.d.ts  app.html
folkers-frontend/src/lib/: api.ts  index.ts
folkers-frontend/src/lib/api/: client.ts  error.ts
folkers-frontend/src/lib/components/: maybenot.svelte  protected.svelte
folkers-frontend/src/lib/guards/: auth.guard.ts
folkers-frontend/src/lib/services/: auth.service.ts  media.service.ts  person.service.ts  user.service.ts
folkers-frontend/src/lib/stores/: auth.ts  toaster.ts
folkers-frontend/src/lib/types/: auth.ts  person.ts  signature.ts  surreal.ts
folkers-frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
folkers-frontend/src/routes/login/: +layout.svelte  +page.svelte
folkers-frontend/src/routes/persons/: +layout.svelte
folkers-frontend/src/routes/persons/[id]/: +layout.svelte  +page.svelte
folkers-frontend/src/routes/persons/create/: +layout.svelte  +page.svelte
folkers-frontend/src/routes/users/: +layout.server.ts  +layout.svelte  +page.svelte
(+9 files in other folders)
