[package]
name = "folkers-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = "2.3.10"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
