[package]
name = "folkers-backend"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["multipart"] }
base64 = "0.22.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
surrealdb = "2.3.10"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = "1.18.1"
rand_core = "0.6.4"
